# LinkShortifyBot

./: .env  .env.example  .gitignore  README.md  bot.py  config.py  dockerfile  install.sh  linkshortify-bot.service  messages.py  middleware.py  pyproject.toml  requirements.txt  run.py  start.sh
.claude/: settings.local.json
app/: __init__.py  bot.py  config.py  messages.py
app/core/: __init__.py  logging.py  metrics.py  middleware.py
app/db/: __init__.py  database.py
app/handlers/: __init__.py  admin.py  message.py  user.py
app/services/: api_client.py  shortener.py
app/utils/: html_parser.py  logger.py  processing.py  text_filters.py
db/: __init__.py  database.py
deploy/: Dockerfile  install.sh  linkshortify-bot.service
handlers/: admin.py  message.py  user.py
services/: api_client.py  shortener.py
utils/: logger.py  processing.py
